feat: add authoritative space management
